styles.css
#app {
  max-width: 1920px;
}
.site-name-xs {
  font-size: 24px;
}
#holder-box {
  margin-top: 20px;
  text-align: right;
}
.book-container {
  margin: 3px;
}
.thumbnail { /* override bootstrap 3 */
  margin-bottom: 0px !important;
}
.book-cover {
  text-align: center;
  height: 200px;
}
.book-title {
  font-size: 16px;
  font-weight: bold;
}
.book-title, .book-author {
  white-space: nowrap; 
  overflow: hidden;
  text-overflow: ellipsis;
}
.book-rented {
  opacity: 0.5;
}
.sep::before {
  content: "•";
  padding: 5px;
}
.thumbnail {
  border: 0px solid white;
}
.books {
  display: flex;
  flex-wrap: wrap;
}
#social-links {
  margin-top: 5px;
}
.select-book {
  margin-right: 10px;
}
#contact-links {
  margin-bottom: 10px;
}
.invisible {
  opacity: 0;
}
.media-body {
  width: 100%;
}
[v-cloak] {
  display: none;
}
.user-image {
	height: 70px;
	margin-top: 3px;
}
.brand-link {
  color: darkslategrey;
  font-weight: bold;
  text-decoration: none; /* no underline */
}
.brand-link:hover {
  text-decoration: none; /* no underline */
}
.brand-link:focus {
  text-decoration: none; /* no underline */
}
.pages-container {
  width: 100%;
  text-align: center;
  margin-top: 15px;
  margin-bottom: 30px;
}
.footer {
  text-align: center;
  margin-top: 32px;
  height: 64px;
}
/* Important part */
.modal-dialog {
  overflow-y: initial !important
}
.modal-body {
  height: 75vh;
  overflow-y: auto;
}

